<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context="com.bitland.studioghibli.ui.MainActivity">

    <TextView
        android:id="@+id/headerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/header_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLabel"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:text="@string/title_label_text"
                android:textColor="#80FFFFFF"
                android:textSize="18sp"
                android:paddingLeft="@dimen/padding_left"/>

            <TextView
                android:id="@+id/producerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:text="@string/producer_label_text"
                android:textColor="#80FFFFFF"
                android:textSize="18sp"
                android:paddingLeft="@dimen/padding_left"/>

            <TextView
                android:id="@+id/directorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:text="@string/director_label_text"
                android:textColor="#80FFFFFF"
                android:textSize="18sp"
                android:paddingLeft="@dimen/padding_left"/>

            <TextView
                android:id="@+id/yearOfReleaseLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:text="@string/year_label_text"
                android:textColor="#80FFFFFF"
                android:textSize="18sp"
                android:paddingLeft="@dimen/padding_left"/>

            <TextView
                android:id="@+id/ratingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:text="@string/rating_label_text"
                android:textColor="#80FFFFFF"
                android:textSize="18sp"
                android:paddingLeft="@dimen/padding_left"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movieLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/vertical_margin"
                android:text="--"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/producerNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/vertical_margin"
                android:text="--"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/directorNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/vertical_margin"
                android:text="--"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/actualYearLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/vertical_margin"
                android:text="--"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/actualRatingLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/vertical_margin"
                android:text="--"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <Button
                android:id="@+id/showSymopsisButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/button_background"
                android:contentDescription="@string/show_synopsis_button_description"
                android:text="@string/button_text"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_text_size"
                android:layout_marginRight="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <Button
                android:id="@+id/showMovieListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/button_background"
                android:contentDescription="@string/movie_list_button_description"
                android:text="@string/show_movie_list_button_text"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_text_size"/>
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
